// MATHEUS
public class SentimentoMercado {
}
